--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "private": true,
   "homepage": "https://vladmalevich14.github.io/my-portfolio",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-typing-effect": "^2.0.3",
     "gh-pages": "^4.0.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "react-typing-effect": "^2.0.5",
+    "tsparticles": "^2.9.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
