--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-scroll": "^1.8.7",
     "@types/react-typing-effect": "^2.0.3",
     "gh-pages": "^4.0.0",
     "node-sass": "^8.0.0",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.9.3",
     "react-typing-effect": "^2.0.5",
     "tsparticles": "^2.9.3",
