--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/node-sass": "^4.11.3",
@@ -15,6 +16,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-scroll": "^1.8.7",
     "@types/react-typing-effect": "^2.0.3",
+    "axios": "^1.4.0",
+    "formik": "^2.4.3",
     "gh-pages": "^4.0.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
